--- a/css/globals/utilities.css
+++ b/css/globals/utilities.css
@@ -33,17 +33,13 @@
 
 .width-100 {
     width: 100%;
+    max-width: 100%;
+}
+
+.width-604 {
+    width: 100%;
     max-width: 604px;
 }
-/* 
-
-.content-box {
-    display: flex;
-    width: 90%;
-    height: auto;
-    gap: 5rem;
-    padding-top: 10rem;
-} */
 
 .is-same-length {
     flex: 1;
@@ -54,12 +50,7 @@
     justify-content: center;
     align-items: center;
 }
-/*
-.is-centered-col {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-} */
+
 
 .flexible {
     flex-grow: 1;
